--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,80 @@
+@font-face {
+    font-family: 'Florent-Poster-Two';
+    src: url('../fonts/Florent-PosterTwo.ttf') format('truetype');
+  }
+
+  @font-face {
+    font-family: 'Florent-Poster-Two-Outline';
+    src: url('../fonts/Florent-PosterTwoOutline.otf') format('opentype');
+  }
+
+  @font-face {
+    font-family: 'Open-Sans';
+    src: url('../fonts/OpenSans-Regular.ttf') format('truetype');
+  }
+
+  @font-face {
+    font-family: 'Open-Sans-Extra-Bold';
+    src: url('../fonts/OpenSans-SemiBold.ttf') format('truetype');
+  }
+
+  @font-face {
+    font-family: 'Open-Sans-Semi-Bold';
+    src: url('../fonts/OpenSans-SemiBold.ttf') format('truetype');
+  }
 * {
+    color: #231f20;
     background-color: white;
+}
+
+h1 {
+    font-family: 'Florent-Poster-Two';
+}
+
+h3 {
+    font-family: 'Open-Sans-Semi-Bold';
+}
+
+li p {
+    font-family: 'Open-Sans';
+}
+
+.color {
+    display: inline-block;
+    padding: 5px;
+}
+
+#bright-gold {
+    background-color: #cfa153;
+    border: 4px solid #231f20;
+}
+
+#black-6c {
+    background-color: #231f20;
+    border: 4px solid #ffffff;
+}
+
+#bright-white {
+    background-color: #ffffff;
+    border: 4px solid #231f20;
+}
+
+.font {
+    font-size: large;
+}
+
+#florent-bold-type {
+    font-family: 'Florent-Poster-Two';
+}
+
+#florent-poster-two-outline {
+    font-family: 'Florent-Poster-Two-Outline';
+}
+
+#open-sans {
+    font-family: 'Open-Sans';
+}
+
+footer {
+    text-align: right;
 }
