--- a/styles.css
+++ b/styles.css
@@ -1,26 +1,26 @@
-@font-face {
+  @font-face {
     font-family: 'Florent-Poster-Two';
-    src: url('../fonts/Florent-PosterTwo.ttf') format('truetype');
+    src: url('fonts/Florent-PosterTwo.ttf') format('truetype');
   }
 
   @font-face {
     font-family: 'Florent-Poster-Two-Outline';
-    src: url('../fonts/Florent-PosterTwoOutline.otf') format('opentype');
+    src: url('fonts/Florent-PosterTwoOutline.otf') format('opentype');
   }
 
   @font-face {
     font-family: 'Open-Sans';
-    src: url('../fonts/OpenSans-Regular.ttf') format('truetype');
+    src: url('fonts/OpenSans-Regular.ttf') format('truetype');
   }
 
   @font-face {
     font-family: 'Open-Sans-Extra-Bold';
-    src: url('../fonts/OpenSans-SemiBold.ttf') format('truetype');
+    src: url('fonts/OpenSans-SemiBold.ttf') format('truetype');
   }
 
   @font-face {
     font-family: 'Open-Sans-Semi-Bold';
-    src: url('../fonts/OpenSans-SemiBold.ttf') format('truetype');
+    src: url('fonts/OpenSans-SemiBold.ttf') format('truetype');
   }
 * {
     color: #231f20;
@@ -29,52 +29,132 @@
 
 h1 {
     font-family: 'Florent-Poster-Two';
+    font-size: xx-large;
+    font-weight: normal;
+
 }
+
+h2 {
+    font-family: 'Open-Sans-Extra-Bold';
+    font-size: x-large;
+    font-weight: 500;
+}
+
+    .subheading {
+        background-color: #231f20;
+        color: #cfa153;
+        padding: 5px 15px;
+        margin-right: 60px;
+        border-top-right-radius: 15px;
+        border-bottom-right-radius: 15px;
+    }
 
 h3 {
     font-family: 'Open-Sans-Semi-Bold';
 }
 
-li p {
+p {
     font-family: 'Open-Sans';
+    font-size: large;
+    font-weight:normal
+}
+
+body {
+    border: black solid 4px;
+    border-radius: 15px;
+}
+
+
+li, p {
+    font-family: 'Open-Sans';
+}
+
+.title {
+    display: inline-block;
+    padding-top: 25px;
+    text-align: center;
+}
+
+    img {
+        max-width: 25%;
+        height: auto;
+        margin: auto;
+    }     
+
+#colors {
+    display: flex;
+    justify-content: space-between;
 }
 
 .color {
     display: inline-block;
-    padding: 5px;
+    border-radius: 15px;
+    width: 300px;
+    margin: 20px auto;
+    padding: 20px 40px;
+    
 }
+    .bright-gold {
+        background-color: #cfa153;
+        margin: 10px;
+    }
+    #bright-gold {
+        border: 4px solid #231f20;
+        background-color: #cfa153;
+     
+    }
 
-#bright-gold {
-    background-color: #cfa153;
-    border: 4px solid #231f20;
-}
+    .black-6c {
+        background-color: #231f20;
+        color: #cfa153;
+        margin: 10px;
+    }
+    #black-6c {
+       border: 4px solid #cfa153;
+       background-color: #231f20;
+       color: #cfa153;
 
-#black-6c {
-    background-color: #231f20;
-    border: 4px solid #ffffff;
-}
+    }
 
-#bright-white {
-    background-color: #ffffff;
-    border: 4px solid #231f20;
-}
+    .bright-white {
+        background-color: #ffffff;
+        margin: 10px;
+    }
+    #bright-white {
+        border: 4px solid #231f20;
+      
+    }
 
-.font {
+#fonts {
     font-size: large;
+    display: flex;
+    justify-content: space-between;
 }
 
-#florent-bold-type {
-    font-family: 'Florent-Poster-Two';
+.font-list {
+    list-style-type: none;
+    text-align: center;
+    line-height: 30px;
+    margin: 0 auto;
 }
 
-#florent-poster-two-outline {
-    font-family: 'Florent-Poster-Two-Outline';
-}
+    #florent-bold-type {
+        font-family: 'Florent-Poster-Two';
+    }
 
-#open-sans {
-    font-family: 'Open-Sans';
+    #florent-poster-two-outline {
+        font-family: 'Florent-Poster-Two-Outline';
+    }
+
+    #open-sans {
+        font-family: 'Open-Sans';
+    }
+    
+#text-styles {
+    padding-left: 20px;
 }
 
 footer {
     text-align: right;
+    padding-right: 15px;
 }
